fixed a glitch with the background on mobile

--- a/app/scss/layout/_layout.scss
+++ b/app/scss/layout/_layout.scss
@@ -11,7 +11,7 @@ body {
     width: 100%;
     height: 35vh;
     background-image: url(../assets/images/pattern-bg-mobile.png);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 .wrapper--2 {
